fix: show close button on mobile

--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -644,7 +644,8 @@ html[data-theme='dark'] {
         transform: scale(1);
       }
     }
-
+    
+    .is-mobile &,
     &:hover {
       .close {
         visibility: visible;
